Added full results from inside container to README